--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
-
-*.bin
-.gradle/7.5/executionHistory/executionHistory.bin
-.gradle/7.5/executionHistory/executionHistory.lock
-.gradle/7.5/fileHashes/fileHashes.bin
-.gradle/7.5/fileHashes/fileHashes.lock
-.gradle/7.5/fileHashes/resourceHashesCache.bin
-.gradle/buildOutputCleanup/buildOutputCleanup.lock
-.local.properties
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
